# roslibpy_bridge_test

./: README.md  docker-compose.yml
bridge/: Dockerfile  main.py
ros/: Dockerfile
ros/catkin_ws/src/custom_service/: CMakeLists.txt  package.xml
ros/catkin_ws/src/custom_service/launch/: service.launch
ros/catkin_ws/src/custom_service/msg/: CustomMessage.msg
ros/catkin_ws/src/custom_service/scripts/: service.py
ros/catkin_ws/src/custom_service/srv/: CustomService.srv
ros/catkin_ws/src/my_robot/: CMakeLists.txt  package.xml
ros/catkin_ws/src/my_robot/launch/: robot.launch
ros/catkin_ws/src/my_robot/scripts/: robot.py
